--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div id="ideaButton">
-                    <form action="register.html">
+                    <form action="register.php">
                         <button type="submit">Присъедини се</button>
                     </form>
                 </div>
