--- a/register.html
+++ b/register.html
@@ -53,34 +53,34 @@
             <form method="post">
                 <div class="form-group">
                     <label for="username">Никнейм</label>
-                    <input type="text" class="form-control" id="username">
+                    <input type="text" class="form-control" id="username" name="username">
                     <label for="firstName">Име</label>
-                    <input type="text" id="firstName" class="form-control">
+                    <input type="text" id="firstName" class="form-control" name="firstName">
                     <label for="lastName">Фамилия</label>
-                    <input type="text" id="lastName" class="form-control">
+                    <input type="text" id="lastName" class="form-control" name="lastName">
                     <label for="email">Email</label>
-                    <input type="email" id="email" class="form-control">
+                    <input type="email" id="email" class="form-control" name="email">
                     <label for="password">Парола</label>
-                    <input type="password" id="password" class="form-control">
+                    <input type="password" id="password" class="form-control" name="password">
                     <label for="confirmPassword">Потвърди паролата</label>
-                    <input type="password" id="confirmPassword" class="form-control">
+                    <input type="password" id="confirmPassword" class="form-control" name="confirmPassword">
                     <label for="birthday">Дата на раждане</label>
-                    <input type="date" id="birthday" class="form-control">
+                    <input type="date" id="birthday" class="form-control" name="birthday">
                     <label for="username">Пол</label>
-                    <select class="form-control" id="gender">
+                    <select class="form-control" id="gender" name="gender">
                         <option value="male">Мъж</option>
                         <option value="female">Жена</option>
                     </select>
                     <label for="phoneNumber">Телефон</label>
-                    <input type="text" id="phoneNumber" class="form-control">
+                    <input type="text" id="phoneNumber" class="form-control" name="phoneNumber">
                     <hr>
                     <label for="rules">
-                        <input type="checkbox" class="form-check-input" id="rules">
+                        <input type="checkbox" class="form-check-input" id="rules" name="rules">
                         Прочетох и съм съгласен с правилата.
                     </label>
                     <div class="g-recaptcha" data-sitekey="6LcrfxgUAAAAAF97W8IbPD10o_JEgUDbIUOiLIw8"></div>
                     <hr>
-                    <button type="submit" class="btn btn-primary" id="createAcc">Създай акаунт</button>
+                    <button type="submit" class="btn btn-primary" id="createAcc" name="register">Създай акаунт</button>
                 </div>
             </form>
         </div>
