--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="col-xs-12 col-sm-12">
             <h1>Регистрация</h1>
-            <h4>Вече имаш профил? Влез от <a href="login.html">тук.</a></h4>
+            <h4>Вече имаш профил? Влез от <a href="login.php">тук.</a></h4>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 pull-right">
             <div class="facts">
