--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                     <span class="searchRidePicture"></span>
                     <h3>Търся превоз</h3>
                     <div class="searchRideExpand">
-                        <form method="post" action="#">
+                        <form method="post" action="search-ride.php">
                             <div class="form-group">
                                 <label for="from">От</label>
                                 <select class="form-control" id="searchFrom" name="searchFrom">
