--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
                         <li><a href="#">Идеята</a></li>
-                        <li><a href="#">Търся превоз</a></li>
-                        <li><a href="#">Предлагам превоз</a></li>
+                        <li><a href="#rides" class="slide-section">Търся превоз</a></li>
+                        <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
                         <li><a href="#">Правила</a></li>
                         <li><a href="#">Отзиви</a></li>
                     </ul>
