--- a/index.html
+++ b/index.html
@@ -1222,9 +1222,11 @@
                     </table>
                 </div>
                 <div class="centerButton">
-                    <button type="submit" class="btn btn-primary" id="seeAll" name="seeAll">
-                        Виж всички
-                    </button>
+                    <form action="show-all-posts.php">
+                        <button type="submit" class="btn btn-primary" id="seeAll" name="seeAll">
+                            Виж всички
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
