--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Title</title>
 </head>
-<body>
+<body id="notLogged">
 <div id="header">
     <div class="container">
         <div class="row">
@@ -19,13 +19,9 @@
             <div class="col-xs-6 col-sm-6 col-md-9">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="#">Идеята</a></li>
-                        <li><a href="#rides" class="slide-section">Търся превоз</a></li>
-                        <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
-                        <li><a href="login.php" class="login-button">Вход</a></li>
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
+                        <li><a href="login.php" class="login-button">Вход</a></li>
                     </ul>
-
                 </div>
                 <div class="menuMobile">
                     <a href="#"></a>
