--- a/showAll.html
+++ b/showAll.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Всички обяви</title>
 </head>
-<body>
+<body id="bodyAllPosts">
 <div id="header">
     <div class="container">
         <div class="row">
