--- a/index-logged.html
+++ b/index-logged.html
@@ -31,7 +31,7 @@
                                     <!-- drop menu /да се оправи/ -->
                                     <ul class="menu">
                                         <li><a href="profile.html">Обяви</a></li>
-                                        <li><a href="index.html">Изход <!--logout php тук --></a></li>
+                                        <li><a href="logout.php">Изход <!--logout php тук --></a></li>
                                     </ul>
                                 </div>
                             </li>
