--- a/index-logged.html
+++ b/index-logged.html
@@ -18,24 +18,23 @@
             <div class="col-xs-6 col-sm-6 col-md-9">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="#">Идеята</a></li>
                         <li><a href="#rides" class="slide-section">Търся превоз</a></li>
                         <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
-                        <ul class="profile-wrapper">
-                            <li>
-                                <!-- user profile -->
-                                <div class="profile">
+                    </ul>
+                    <ul class="profile-wrapper">
+                        <li>
+                            <!-- user profile -->
+                            <div class="profile">
 
-                                    <a href="profile.html" class="name"><img src="images/14642425_1309125205788946_5505446360160841357_n.jpg" /> User</a>
+                                <a href="profile.html" class="name"><img src=url(../images/14642425_1309125205788946_5505446360160841357_n.jpg) /> User</a>
 
-                                    <!-- drop menu /да се оправи/ -->
-                                    <ul class="menu">
-                                        <li><a href="profile.html">Обяви</a></li>
-                                        <li><a href="logout.php">Изход <!--logout php тук --></a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
+                                <!-- drop menu /да се оправи/ -->
+                                <ul class="menu">
+                                    <li><a href="profile.html">Обяви</a></li>
+                                    <li><a href="logout.php">Изход <!--logout php тук --></a></li>
+                                </ul>
+                            </div>
+                        </li>
                     </ul>
 
                 </div>
@@ -50,8 +49,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12">
-                <h2>Един шофьор, много пътници. За едно по-приятно и полезно пътуване!</h2>
-                <h4>Споделеното пътуване е възможност за всички:</h4>
+                <h2>Един шофьор, много пътници. <br>За едно по-приятно и полезно пътуване!</h2>
+                <p class="underHeadline">Споделеното пътуване е възможност за всички:</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card">
@@ -74,7 +73,7 @@
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card">
                     <div class="icon icon-nature"></div>
-                    <p>Да мислим и опазваме природата!</p>
+                    <p>Да мислим и за природата!</p>
                 </div>
             </div>
         </div>
