--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12">
-                <h2>Един шофьор, много пътници. За едно по-приятно и полезно пътуване!</h2>
-                <h4>Споделеното пътуване е възможност за всички:</h4>
+                <h2>Един шофьор, много пътници. <br>За едно по-приятно и полезно пътуване!</h2>
+                <p class="underHeadline">Споделеното пътуване е възможност за всички:</p>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card">
@@ -58,7 +58,7 @@
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card">
                     <div class="icon icon-nature"></div>
-                    <p>Да мислим и опазваме природата!</p>
+                    <p>Да мислим и за природата!</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
