--- a/register.html
+++ b/register.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title>Title</title>
+    <title>Регистрация</title>
 </head>
-<body>
+<body class="bodyAllPosts">
 <div id="header">
     <div class="container">
         <div class="row">
@@ -17,11 +17,8 @@
             <div class="col-xs-6 col-sm-6 col-md-9">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="#">Идеята</a></li>
-                        <li><a href="#">Търся превоз</a></li>
-                        <li><a href="#">Предлагам превоз</a></li>
-                        <li><a href="#">Правила</a></li>
-                        <li><a href="#">Отзиви</a></li>
+                        <li><a href="login.php" class="login-button">Вход</a></li>
+                        <li><a href="register.php" class="register-button">Регистрация</a></li>
                     </ul>
                 </div>
                 <div class="menuMobile">
