--- a/login.html
+++ b/login.html
@@ -7,21 +7,15 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Title</title>
 </head>
-<body>
+<body class="bodyAllPosts">
 <div id="header">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3">
-                <a href="#">Logo</a>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="#">Идеята</a></li>
-                        <li><a href="#">Търся превоз</a></li>
-                        <li><a href="#">Предлагам превоз</a></li>
-                        <li><a href="#">Правила</a></li>
-                        <li><a href="#">Отзиви</a></li>
+                        <li><a href="register.php" class="register-button">Регистрация</a></li>
+                        <li><a href="login.php" class="login-button">Вход</a></li>
                     </ul>
                 </div>
                 <div class="menuMobile">
@@ -32,16 +26,18 @@
     </div>
 </div>
 <div id="login">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-                <div class="loginStyle">
-                    <h1>Вход</h1>
-                    <form method="post">
+    <div id="vertCent">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+                    <div class="loginStyle">
+                        <h1>Вход</h1>
+                        <form method="post">
                             <input type="text" name="email" placeholder="Email">
                             <input type="password" name="password" placeholder="Password">
                             <input type="submit" name="login" class="login login-submit" value="Вход">
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
