--- a/register.html
+++ b/register.html
@@ -38,40 +38,43 @@
             <div class="facts">
                 <h3 id="test">Знаете ли, че:</h3>
                 <ul>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+                    <li>"Споделено пътуване" вярва, че да пътуваш може да бъде евтино, зелено и забавно.</li>
+                    <li>Като споделяте пътуването си, Вие пестите гориво и пари, намалявате вредните емисии и се запознавате
+                        с нови приятели.</li>
+                    <li>Сайта дава възможност да се свържете с хора с цел да пътувате заедно, като си поделите разходите за пътуването.</li>
+                    <li>Идеята е да се пътува по-ефективно, и така да се намалят замърсяването, шума, натовареността на пътищата,
+                        и да се запази околната среда.
+                    </li>
+                    <li>Услугите в сайта са напълно безплатни!</li>
                 </ul>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-8">
             <form method="post">
                 <div class="form-group">
-                    <label for="username">Никнейм</label>
+                    <label for="username" class="boxesName">Никнейм</label>
                     <input type="text" class="form-control" id="username" name="username">
-                    <label for="firstName">Име</label>
+                    <label for="firstName" class="boxesName">Име</label>
                     <input type="text" id="firstName" class="form-control" name="firstName">
-                    <label for="lastName">Фамилия</label>
+                    <label for="lastName" class="boxesName">Фамилия</label>
                     <input type="text" id="lastName" class="form-control" name="lastName">
-                    <label for="email">Email</label>
+                    <label for="email" class="boxesName">Email</label>
                     <input type="email" id="email" class="form-control" name="email">
-                    <label for="password">Парола</label>
-                    <input type="password" id="password" class="form-control" name="password">
-                    <label for="confirmPassword">Потвърди паролата</label>
+                    <label for="password" class="boxesName">Парола</label>
+                    <input type="password" id="password" class="form-control boxesName" name="password">
+                    <label for="confirmPassword" class="boxesName">Потвърди паролата</label>
                     <input type="password" id="confirmPassword" class="form-control" name="confirmPassword">
-                    <label for="birthday">Дата на раждане</label>
+                    <label for="birthday" class="boxesName">Дата на раждане</label>
                     <input type="date" id="birthday" class="form-control" name="birthday">
-                    <label for="username">Пол</label>
+                    <label for="username" class="boxesName">Пол</label>
                     <select class="form-control" id="gender" name="gender">
                         <option value="male">Мъж</option>
                         <option value="female">Жена</option>
                     </select>
-                    <label for="phoneNumber">Телефон</label>
+                    <label for="phoneNumber" class="boxesName">Телефон</label>
                     <input type="text" id="phoneNumber" class="form-control" name="phoneNumber">
                     <hr>
-                    <label for="rules">
+                    <label for="rules" class="boxesName">
                         <input type="checkbox" class="form-check-input" id="rules" name="rules">
                         Прочетох и съм съгласен с правилата.
                     </label>
