--- a/register.html
+++ b/register.html
@@ -7,14 +7,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Регистрация</title>
 </head>
-<body class="bodyAllPosts">
+<body>
 <div id="header">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3">
-                <a href="#">Logo</a>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
                         <li><a href="login.php" class="login-button">Вход</a></li>
@@ -29,6 +26,7 @@
     </div>
 </div>
 <div id="registerForm">
+    <div id="vertCent">
     <div class="container">
         <div class="col-xs-12 col-sm-12">
             <h1>Регистрация</h1>
@@ -84,6 +82,7 @@
                 </div>
             </form>
         </div>
+    </div>
     </div>
 </div>
 <script src='https://www.google.com/recaptcha/api.js'></script>
