--- a/showAll.html
+++ b/showAll.html
@@ -17,11 +17,9 @@
             <div class="col-xs-6 col-sm-6 col-md-9">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="#">Идеята</a></li>
-                        <li><a href="#">Търся превоз</a></li>
-                        <li><a href="#">Предлагам превоз</a></li>
-                        <li><a href="#">Правила</a></li>
-                        <li><a href="#">Отзиви</a></li>
+                        <li><a href="index-logged.html">Начало</a></li>
+                        <li><a href="index-logged.html#rides">Търся превоз</a></li>
+                        <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
                     </ul>
                 </div>
                 <div class="menuMobile">
