--- a/index-logged.html
+++ b/index-logged.html
@@ -12,29 +12,14 @@
 <div id="header">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3">
-                <a href="#">Logo</a>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
                         <li><a href="#rides" class="slide-section">Търся превоз</a></li>
                         <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
                     </ul>
-                    <ul class="profile-wrapper">
-                        <li>
-                            <!-- user profile -->
-                            <div class="profile">
+                    <ul class="list-unstyled">
 
-                                <a href="profile.html" class="name"><img src=url(../images/14642425_1309125205788946_5505446360160841357_n.jpg) /> User</a>
-
-                                <!-- drop menu /да се оправи/ -->
-                                <ul class="menu">
-                                    <li><a href="profile.html">Обяви</a></li>
-                                    <li><a href="logout.php">Изход <!--logout php тук --></a></li>
-                                </ul>
-                            </div>
-                        </li>
                     </ul>
 
                 </div>
@@ -1038,8 +1023,12 @@
         <div class="row">
             <div class="col-xs-12 col-md-12">
                 <div class="centerButton">
-                    <span class="icon icon-fb"></span>
-                    <span class="icon icon-twitter"></span>
+                    <a href="#">
+                        <span class="icon icon-fb"></span>
+                    </a>
+                    <a href="#">
+                        <span class="icon icon-twitter"></span>
+                    </a>
                 </div>
                 <h5>Team Glaurung@SoftUni 2017</h5>
             </div>
