--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <div id="header">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3">
-                <a href="#">Logo</a>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
@@ -215,8 +212,12 @@
         <div class="row">
             <div class="col-xs-12 col-md-12">
                 <div class="centerButton">
-                    <span class="icon icon-fb"></span>
-                    <span class="icon icon-twitter"></span>
+                    <a href="#">
+                        <span class="icon icon-fb"></span>
+                    </a>
+                    <a href="#">
+                        <span class="icon icon-twitter"></span>
+                    </a>
                 </div>
                 <h5>Team Glaurung@SoftUni 2017</h5>
             </div>
