added mobile menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Title</title>
 </head>
-<body id="notLogged">
+<body>
 <div id="header">
     <div class="container">
         <div class="row">
@@ -18,10 +18,25 @@
                     <ul class="list-unstyled menuItems">
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
                         <li><a href="login.php" class="login-button">Вход</a></li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
-                <div class="menuMobile">
-                    <a href="#"></a>
+                <a href="#" class="menuMobile">
+                    <span></span>
+                </a>
+                <div class="mobileHidden">
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="icon icon-rightArrow"></span>
+                        </li>
+                        <li>
+                            <a href="register.php" class="register-button">Регистрация</a>
+                        </li>
+                        <li>
+                            <a href="login.php" class="login-button">Вход</a>
+                        </li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
