--- a/register.html
+++ b/register.html
@@ -16,10 +16,25 @@
                     <ul class="list-unstyled menuItems">
                         <li><a href="login.php" class="login-button">Вход</a></li>
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
-                <div class="menuMobile">
-                    <a href="#"></a>
+                <a href="#" class="menuMobile">
+                    <span></span>
+                </a>
+                <div class="mobileHidden">
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="icon icon-rightArrow"></span>
+                        </li>
+                        <li>
+                            <a href="register.php" class="register-button">Регистрация</a>
+                        </li>
+                        <li>
+                            <a href="login.php" class="login-button">Вход</a>
+                        </li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -86,5 +101,7 @@
     </div>
 </div>
 <script src='https://www.google.com/recaptcha/api.js'></script>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
