--- a/index-logged.html
+++ b/index-logged.html
@@ -17,14 +17,29 @@
                     <ul class="list-unstyled menuItems">
                         <li><a href="#rides" class="slide-section">Търся превоз</a></li>
                         <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
                     </ul>
                     <ul class="list-unstyled">
 
                     </ul>
 
                 </div>
-                <div class="menuMobile">
-                    <a href="#"></a>
+                <a class="menuMobile">
+                    <span></span>
+                </a>
+                <div class="mobileHidden">
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="icon icon-rightArrow"></span>
+                        </li>
+                        <li>
+                            <a href="#rides" class="slide-section">Търся превоз</a>
+                        </li>
+                        <li>
+                            <a href="#rides" class="slide-section">Предлагам превоз</a>
+                        </li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
