--- a/showAll.html
+++ b/showAll.html
@@ -11,19 +11,28 @@
 <div id="header">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3">
-                <a href="#">Logo</a>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
                         <li><a href="index-logged.html">Начало</a></li>
                         <li><a href="index-logged.html#rides">Търся превоз</a></li>
                         <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
-                <div class="menuMobile">
-                    <a href="#"></a>
+                <a href="#" class="menuMobile">
+                    <span></span>
+                </a>
+                <div class="mobileHidden">
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="icon icon-rightArrow"></span>
+                        </li>
+                        <li><a href="index-logged.html">Начало</a></li>
+                        <li><a href="index-logged.html#rides">Търся превоз</a></li>
+                        <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -76,5 +85,7 @@
         </div>
     </div>
 </div>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
