--- a/register.html
+++ b/register.html
@@ -79,7 +79,7 @@
                     <label for="email" class="boxesName">Email</label>
                     <input type="email" id="email" class="form-control" name="email">
                     <label for="password" class="boxesName">Парола</label>
-                    <input type="password" id="password" class="form-control boxesName" name="password">
+                    <input type="password" id="password" class="form-control" name="password">
                     <label for="confirmPassword" class="boxesName">Потвърди паролата</label>
                     <input type="password" id="confirmPassword" class="form-control" name="confirmPassword">
                     <label for="birthday" class="boxesName">Дата на раждане</label>
