--- a/register.html
+++ b/register.html
@@ -80,6 +80,7 @@
                     <input type="email" id="email" class="form-control" name="email">
                     <label for="password" class="boxesName">Парола</label>
                     <input type="password" id="password" class="form-control" name="password">
+                    <h5 style="color:white">* Your password must be at least 6 characters.</h5>
                     <label for="confirmPassword" class="boxesName">Потвърди паролата</label>
                     <input type="password" id="confirmPassword" class="form-control" name="confirmPassword">
                     <label for="birthday" class="boxesName">Дата на раждане</label>
