--- a/showAll.html
+++ b/showAll.html
@@ -14,7 +14,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="index-logged.html">Начало</a></li>
+                        <li><a href="index.php">Начало</a></li>
                         <li><a href="index-logged.html#rides">Търся превоз</a></li>
                         <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
                         <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
@@ -28,7 +28,7 @@
                         <li>
                             <span class="icon icon-rightArrow"></span>
                         </li>
-                        <li><a href="index-logged.html">Начало</a></li>
+                        <li><a href="index.php">Начало</a></li>
                         <li><a href="index-logged.html#rides">Търся превоз</a></li>
                         <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
                         <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
