--- a/showAll.html
+++ b/showAll.html
@@ -15,9 +15,9 @@
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
                         <li><a href="index.php">Начало</a></li>
-                        <li><a href="index-logged.html#rides">Търся превоз</a></li>
-                        <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#rides">Търся превоз</a></li>
+                        <li><a href="index.php#rides">Предлагам превоз</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
                 <a href="#" class="menuMobile">
@@ -29,9 +29,9 @@
                             <span class="icon icon-rightArrow"></span>
                         </li>
                         <li><a href="index.php">Начало</a></li>
-                        <li><a href="index-logged.html#rides">Търся превоз</a></li>
-                        <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#rides">Търся превоз</a></li>
+                        <li><a href="index.php#rides">Предлагам превоз</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
             </div>
