--- a/index-logged.html
+++ b/index-logged.html
@@ -17,7 +17,7 @@
                     <ul class="list-unstyled menuItems">
                         <li><a href="#rides" class="slide-section">Търся превоз</a></li>
                         <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                     <ul class="list-unstyled">
 
@@ -38,7 +38,7 @@
                         <li>
                             <a href="#rides" class="slide-section">Предлагам превоз</a>
                         </li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
             </div>
